Доработал Игровую и Рабочую Зону

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="nav">
 						<ul>
-							<li><a href="#">Главная</a></li>
+							<li><a href="#" class="active" >Главная</a></li>
 							<li><a href="#">Тарифы</a></li>
 							<li><a href="#">История</a></li>
 							<li><a href="#">FAQ</a></li>
@@ -48,28 +48,101 @@
 					</div>
 				</div>
 				<div class="clear-fix col-md-12 col-sm-12"></div>
-				<div class="content-bar col-md-12 col-sm-12">
-					<!-- Контентная часть -->
-					<div class="nav-bar-left col-md-3 col-sm-3 col-3">
-						<!-- Кнопки и Инфо о пользователе -->
 
-						<div class="user-info">
-							<div class="avatar-zone">
-								<img id="user_avatar" src="https://pp.userapi.com/c849336/v849336257/5b944/xqmsnY63jXI.jpg" alt="user.png" height="50">
-							</div>
-							<div class="info-zone">
-								<h6 id="user_name">👽JESUSGVN</h6>
-								<h5 id="user_balance">💰2000 руб.</h5>
+
+				<div class="content-bar conainer col-md-12 col-sm-12 col-12">
+					<div class="row justify-content-md-center justify-content-sm-center">
+						
+						<!-- Контентная часть -->
+						<div class="nav-bar-left col-md-3 col-sm-12 col-12">
+							<!-- Кнопки и Инфо о пользователе -->
+
+							<div class="user-info col-md-12 col-sm-12 col-12">
+								<div class="avatar-zone">
+									<img id="user_avatar" src="https://pp.userapi.com/c849336/v849336257/5b944/xqmsnY63jXI.jpg" alt="user.png" height="50">
+								</div>
+								<div class="info-zone">
+									<h6 id="user_name"><b>👽</b>Эдуард</h6>
+									<h5 id="user_balance">💰2000 руб.</h5>
+								</div>
+
+								<div class="pay-button-zone">
+									<button>Пополнить</button>
+									<button>Вывести</button>
+								</div>
 							</div>
 
-							<div class="pay-button-zone">
-								<button>Пополнить</button>
-								<button>Вывести</button>
+							<div class="nav-bar-menu">
+								<ul>
+									<li><a href="#" class="active">Начать</a></li>
+									<li><a href="#">Мои Рефералы</a></li>
+									<li><a href="#">Подписки</a></li>
+									<li><a href="#">Выход</a></li>
+								</ul>
 							</div>
 						</div>
-					</div>
-					<div class="game-bar col-md-8 col-sm-8 col-8">
-						<!-- Визульная игровая зона -->
+						<div class="game-bar col-md-5 col-sm-12 col-12">
+							<!-- Визульная игровая зона -->
+							<div class="row justify-content-md-center justify-content-sm-center">
+								<div class="session-owner col-md-5">
+									<div class="user-avatar">
+										<img src="https://pp.userapi.com/c849336/v849336257/5b944/xqmsnY63jXI.jpg" height="100" alt="user.png"></img>
+									</div>
+									<h6 class="user-name"><b>👑</b>Эдуард</h6>
+									<!-- <small class="status">Собрано: 0 / 300</small> -->
+								</div>
+
+								<div class="regular-users col-md-12 col-sm-12 col-12">
+
+									<div class="row justify-content-md-center justify-content-sm-center">
+
+										<div class="user col-md-3 col-sm-3">
+											<div class="user-avatar  payed">
+													<img src="https://pp.userapi.com/c857528/v857528639/2b71b/D98tHlAhJrI.jpg" height="80" alt="user.png"></img>
+											</div>
+											<h6 class="user-name "><b>👽</b>Абрахам</h6>
+										</div>
+
+										<div class="user col-md-3 col-sm-3">
+											<div class="user-avatar ">
+												<img src="https://pp.userapi.com/c854120/v854120721/294e8/jQoj9cjVsE0.jpg" height="80" alt="user.png"></img>
+											</div>
+
+											<h6 class="user-name "><b>👽</b>Вика</h6>
+										</div>
+										<div class="user col-md-3 col-sm-3">
+											<div class="user-avatar ">
+												<img src="https://pp.userapi.com/c853420/v853420390/9a3d1/QSKNXZVlCz4.jpg" height="80" alt="user.png"></img>
+											</div>
+
+											<h6 class="user-name"><b>👽</b>Марк</h6>
+										</div>
+										
+									</div>										
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4 col-sm-12 col-12 room-score">
+							<div class="row justify-content-md-center justify-content-sm-center">
+								<div class="score-block col-md-11 col-sm-11">
+									<h3 id="lvl" class="col-md-12 col-sm-12 col-12">LEVEL 5</h3>
+									<div id="throw_button" class="col-md-12 col-sm-12 col-12">
+										<button id="throw">Отдать</button>
+									</div>
+									<div class="room-info col-md-12 col-sm-12 col-12">
+										<ul>
+											<li>ID Комнаты: <small>157987</small></li>
+											<li>Тип комнаты: <small style=" color: #37CE47">PRO</small></li>
+											<li>Кол-во участников: <small style="color: #E8AC03">3/3</small></li>
+											<li>Ставка: <small style="color: #F24B18">100 рублей.</small></li>
+											<li>Собрано: <small style="color: #E8AC03">100/300</small></li>
+											<li>Статус: <small style="color: #FF0031">Не завершенно</small></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="last-game-bar">
