Добавил изменения в игровую зону - добавил подсказку на случай если пользователи не разберутся

--- a/index.html
+++ b/index.html
@@ -84,38 +84,45 @@
 						<div class="game-bar col-md-5 col-sm-12 col-12">
 							<!-- Визульная игровая зона -->
 							<div class="row justify-content-md-center justify-content-sm-center">
+								<div class="description col-md-11 col-sm-11 col-11">
+									<h4>Подсказка</h4>
+									<p>Чтобы скинуть N - сумму, нажмите кнопку <b style="color: #37CE47;">Отдать</b></p>
+								</div>
+
+								<div id="hr" class="col-md-12 col-sm-12 col-12"></div>
+
 								<div class="session-owner col-md-5">
 									<div class="user-avatar">
 										<img src="https://pp.userapi.com/c849336/v849336257/5b944/xqmsnY63jXI.jpg" height="100" alt="user.png"></img>
 									</div>
-									<h6 class="user-name"><b>👑</b>Эдуард</h6>
+									<h6 class="user-name">Эдуард</h6>
 									<!-- <small class="status">Собрано: 0 / 300</small> -->
 								</div>
 
 								<div class="regular-users col-md-12 col-sm-12 col-12">
 
-									<div class="row justify-content-md-center justify-content-sm-center">
+									<div class="row justify-content-md-center justify-content-sm-center ustify-content-lg-center">
 
-										<div class="user col-md-3 col-sm-3">
+										<div class="user col-md-3 col-sm-3 col-4">
 											<div class="user-avatar  payed">
 													<img src="https://pp.userapi.com/c857528/v857528639/2b71b/D98tHlAhJrI.jpg" height="80" alt="user.png"></img>
 											</div>
-											<h6 class="user-name "><b>👽</b>Абрахам</h6>
+											<h6 class="user-name ">Абрахам</h6>
 										</div>
 
-										<div class="user col-md-3 col-sm-3">
+										<div class="user col-md-3 col-sm-3 col-4">
 											<div class="user-avatar ">
 												<img src="https://pp.userapi.com/c854120/v854120721/294e8/jQoj9cjVsE0.jpg" height="80" alt="user.png"></img>
 											</div>
 
-											<h6 class="user-name "><b>👽</b>Вика</h6>
+											<h6 class="user-name ">Вика</h6>
 										</div>
-										<div class="user col-md-3 col-sm-3">
+										<div class="user col-md-3 col-sm-3 col-4">
 											<div class="user-avatar ">
 												<img src="https://pp.userapi.com/c853420/v853420390/9a3d1/QSKNXZVlCz4.jpg" height="80" alt="user.png"></img>
 											</div>
 
-											<h6 class="user-name"><b>👽</b>Марк</h6>
+											<h6 class="user-name">Марк</h6>
 										</div>
 										
 									</div>										
@@ -127,9 +134,6 @@
 							<div class="row justify-content-md-center justify-content-sm-center">
 								<div class="score-block col-md-11 col-sm-11">
 									<h3 id="lvl" class="col-md-12 col-sm-12 col-12">LEVEL 5</h3>
-									<div id="throw_button" class="col-md-12 col-sm-12 col-12">
-										<button id="throw">Отдать</button>
-									</div>
 									<div class="room-info col-md-12 col-sm-12 col-12">
 										<ul>
 											<li>ID Комнаты: <small>157987</small></li>
@@ -139,6 +143,9 @@
 											<li>Собрано: <small style="color: #E8AC03">100/300</small></li>
 											<li>Статус: <small style="color: #FF0031">Не завершенно</small></li>
 										</ul>
+									</div>
+									<div id="throw_button" class="col-md-12 col-sm-12 col-12">
+										<button id="throw">Отдать</button>
 									</div>
 								</div>
 							</div>
